1. organize folder structure 2. Create separate components 3. Add search functionality, filter restaurant data using state variables

--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@ wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
 
     <!-- Using React -->
     <div id="root">Not rendered</div>
-    <script type="module" src="App.js"></script>
+    <script type="module" src="src/App.js"></script>
   </body>
 </html>
